opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bonsai_examples"
bug-reports: "https://github.com/janestreet/bonsai_examples/issues"
dev-repo: "git+https://github.com/janestreet/bonsai_examples.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bonsai_examples/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_extra"
  "async_js"
  "async_kernel"
  "async_rpc_kernel"
  "async_rpc_websocket"
  "bonsai"
  "bonsai_web"
  "core"
  "core_kernel"
  "ppx_jane"
  "virtual_dom"
  "cohttp"              {>= "2.5.6"}
  "cohttp-async"        {>= "2.5.7" & < "3.0.0" | >= "5.1.1" & < "6.0.0"}
  "dune"                {>= "3.11.0"}
  "js_of_ocaml"         {>= "5.1.1" & < "5.7.0"}
  "js_of_ocaml-ppx"     {>= "5.1.1" & < "5.7.0"}
  "ocaml-embed-file"
  "uri"                 {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Examples for bonsai_web, a library for building dynamic webapps, using Js_of_ocaml"
description: "
A collection of bonsai_web examples. Bonsai is a library for building
    reusable UI components inside an Incremental-style UI framework such as
    Incr_dom or React. This repository contains its examples.
"
