(executables
 (modes byte exe)
 (names main)
 (libraries async_js async_kernel async_rpc_kernel bonsai bonsai.extra
   bonsai_guide_code_lib bonsai_web bonsai_web_components.web_ui_form
   bonsai_web_components.web_ui_partial_render_table
   bonsai_web_components.web_ui_toplayer bonsai_web_components.web_ui_url_var
   core virtual_dom.css_gen js_of_ocaml bonsai_web.kado legacy_diffable
   polling_state_rpc uri_parsing)
 (preprocess
  (pps js_of_ocaml-ppx ppx_css ppx_html bonsai.ppx_bonsai ppx_jane
    ppx_typed_fields))
 (js_of_ocaml
  (javascript_files ./resize_iframe.js)))
