(executables
 (modes byte exe)
 (names main)
 (libraries bonsai_web_components.bonsai_experimental_dagviz bonsai_web
   bonsai_web_components.web_ui_element_size_hooks core virtual_dom.css_gen
   bonsai_web_components.feather_icon bonsai_web_components.tailwind_colors
   virtual_dom.svg)
 (preprocess
  (pps js_of_ocaml-ppx ppx_typed_fields ppx_jane ppx_css ppx_demo
    bonsai.ppx_bonsai)))
