(executables
 (modes byte exe)
 (names main)
 (libraries bonsai.extra bonsai_web bonsai_web_components.web_ui_file
   bonsai_web_components.web_ui_file_from_web_file
   bonsai_web_components.bonsai_web_ui_file_upload_zone core js_of_ocaml)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai ppx_html ppx_css js_of_ocaml-ppx)))
