(executables
 (modes byte exe)
 (names main)
 (libraries async_js bonsai_web bonsai_web_components.web_ui_toplayer
   bonsai_web_components.web_ui_gallery core virtual_dom.css_gen
   virtual_dom_toplayer.floating_positioning js_of_ocaml
   virtual_dom_toplayer.popover)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx bonsai.ppx_bonsai ppx_css ppx_demo)))
