(library
 (name bonsai_guide_code_lib)
 (libraries async_js.async_test async_kernel async_rpc_kernel bonsai_web
   bonsai_web_test bonsai_web_test.async bonsai_web_components.web_ui_form
   core polling_state_rpc.diffable_polling_state_rpc_response
   polling_state_rpc uri_parsing time_ago.vdom)
 (preprocess
  (pps js_of_ocaml-ppx ppx_css bonsai.ppx_bonsai ppx_jane ppx_typed_fields)))
