(library
 (name bonsai_examples_mouse_position_lib)
 (libraries async_kernel bonsai_web core
   bonsai_examples_mouse_position_common bonsai_web.ui_view
   bonsai_web_components.tailwind_colors virtual_dom.css_gen
   ppx_css.inline_css js_of_ocaml username_kernel virtual_dom)
 (preprocess
  (pps js_of_ocaml-ppx ppx_jane bonsai.ppx_bonsai)))

(rule
 (targets style.ml style.mli style__generated.ml style__generated.mli)
 (deps style.css)
 (action
  (bash "%{bin:css_inliner} %{deps} \"((rewrite ()))\"")))
