(library
 (name bonsai_examples_mouse_position_native)
 (libraries async bonsai_examples_mouse_position_common cohttp_static_handler
   core csp_monoid exe_server_client exe_server_protocol
   core_unix.filename_unix http_settings krb krb_http polling_state_rpc
   simple_web_server tempfile)
 (preprocess
  (pps ppx_jane)))
