(library
 (name bonsai_chat_open_source_native)
 (public_name bonsai_examples.example_chat_open_source_native)
 (libraries async_extra.async_bus bonsai_chat_open_source_common async
   async_rpc_websocket core_kernel.bus cohttp cohttp-async core uri)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps ../../client/main.bc.js ../../client/style.css)
 (action
  (bash "%{bin:ocaml-embed-file} %{deps} -output embedded_files")))
